--- a/ReunioesApp/Info.plist
+++ b/ReunioesApp/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>Pope.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>Pope.ReunioesApp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
